Improve session tracking and invalidating